--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,6 @@ theme: # leave it empty
 # social
 #author: "nhutbuinc"
 #image: /thumbnail-jumbo.png
-twitter: "Kim Hùng"
+#twitter:
  # username:
 #  site:
