--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nhut Bui Nguyen Cong
-description: Embedded, Auto Tester
+description: Embedded
 show_downloads: false
 
 baseurl: # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
